<resources>
    <string name="app_name">Project Mors</string>
    <string name="Certyfikat">Project Mors 2021 - wszelkie prawa zastrzeżone</string>
    <string name="Zdanie">Tekst</string>
    <string name="kod">Kod Morsa</string>
    <string name="TekstPl">Tu wpisz swoje zdanie</string>
    <string name="Mors">Tu wpisuj kod Morsa</string>
    <string name="Latarka">Nadawaj</string>
    <string name="zakoncz">Zakończ</string>
    <string name="podpowiedz">Podpowiedźi kod Morsa \n
    \n - krótki sygnał . \n
    \n - sygnał długi _ \n
    \n - oddzielanie liter *spacja* \n
    \n - nowe słowo /</string>
</resources>