<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="638dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Zdanie"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/I_Tekst"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textLongMessage|textPersonName"
            android:text="@string/TekstPl"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/kod"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/I_Mors"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="textLongMessage|textPersonName"
            android:text="@string/Mors"
            android:typeface="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Certyfikat"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="OnClick"
        android:text="@string/Latarka"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>